--- a/Desafios_Imersao.ipynb
+++ b/Desafios_Imersao.ipynb
@@ -1125,7 +1125,7 @@
         "id": "RN4UNGoP538I"
       },
       "source": [
-        "O gráfico mé um reflexo da sociedade brasileira e como se auto declaram, em sua maioria **parda**."
+        "O gráfico é um reflexo da sociedade brasileira e como se auto declaram, em sua maioria **parda**."
       ]
     },
     {
