TEA na Educação

--- a/Marianna_Massi_Transtorno_do_Espectro_do_Autista_(TEA)_na_Educação.ipynb
+++ b/Marianna_Massi_Transtorno_do_Espectro_do_Autista_(TEA)_na_Educação.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "name": "Marianna Massi - Transtorno do Espectro do Autista (TEA) na Educação",
-      "provenance": [],
-      "authorship_tag": "ABX9TyOK27KYj2KptpUWMlEvM3d3"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -57,11 +56,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "cBCrB2xB0_d1",
-        "outputId": "842f96be-d6ae-48c5-b782-338f12c432bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 253
-        }
+        },
+        "outputId": "842f96be-d6ae-48c5-b782-338f12c432bf"
       },
       "source": [
         "import pandas as pd\n",
@@ -653,11 +652,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "pB_QQx39ZHVO",
-        "outputId": "8e24f977-c5a1-45ef-a19a-fcfc9f057e00",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 312
-        }
+        },
+        "outputId": "8e24f977-c5a1-45ef-a19a-fcfc9f057e00"
       },
       "source": [
         "sns.barplot(x=['Sem TEA', 'Com TEA'], y=[200, 2], palette=\"pastel\")\n",
@@ -707,11 +706,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "6UV4Cfh5eEXR",
-        "outputId": "dc2c1d67-2e0e-4073-8fd1-e6fd3a5fe37d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
-        }
+        },
+        "outputId": "dc2c1d67-2e0e-4073-8fd1-e6fd3a5fe37d"
       },
       "source": [
         "sns.barplot(x=['2017', '2018'], y=[77102, 105842], palette=\"pastel\")\n",
@@ -769,11 +768,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "hwLficop_HNU",
-        "outputId": "a2475ec8-1bf6-416a-83bf-d50e8c36486c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 955
-        }
+        },
+        "outputId": "a2475ec8-1bf6-416a-83bf-d50e8c36486c"
       },
       "source": [
         "dados.query(\"TP_ENSINO == 2\").value_counts()"
@@ -851,11 +850,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "gEz_g_0q_Nga",
-        "outputId": "820fe4a7-d2d9-41a9-cf40-4ae93d8a5509",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "outputId": "820fe4a7-d2d9-41a9-cf40-4ae93d8a5509"
       },
       "source": [
         "renomear = {1:\"Regular\"}\n",
@@ -924,11 +923,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "M9x-NjEA_ZAm",
-        "outputId": "35223891-8ffe-4abf-83d2-a69576fc4d26",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 142
-        }
+        },
+        "outputId": "35223891-8ffe-4abf-83d2-a69576fc4d26"
       },
       "source": [
         "renomear = {1:\"Não informado\", 2:\"Pública\", 3:\"Particular\"}\n",
@@ -1000,11 +999,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "XCkhxfOi_-pr",
-        "outputId": "5a9f0436-f454-4969-a4f4-ade809be15da",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 591
-        }
+        },
+        "outputId": "5a9f0436-f454-4969-a4f4-ade809be15da"
       },
       "source": [
         "ensino1 = tea[\"TP_ESCOLA\"].value_counts(normalize=True).index\n",
@@ -1054,10 +1053,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "J_2tINDWIHqv",
-        "outputId": "86f7fef6-d9d0-43e6-ce75-59a378922726",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "86f7fef6-d9d0-43e6-ce75-59a378922726"
       },
       "source": [
         "renomear = {0:\"Sem TEA\", 1:\"Com TEA\"}\n",
@@ -1124,10 +1123,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "UYCCn0Gc4O9C",
-        "outputId": "395daebc-92bf-4324-e1f3-5cfbe97f42d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "395daebc-92bf-4324-e1f3-5cfbe97f42d2"
       },
       "source": [
         "dados.query(\"IN_AUTISMO == 1\").value_counts()"
@@ -1167,10 +1166,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "sOHG_nLbhe1K",
-        "outputId": "1ad0794b-d7d9-4b99-bda1-b3a74b787756",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1ad0794b-d7d9-4b99-bda1-b3a74b787756"
       },
       "source": [
         "plt.figure(figsize=(10,8))\n",
@@ -1228,11 +1227,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "82RhGbhVQsh-",
-        "outputId": "f5c473c5-8d03-425a-ac16-e2ec1b13633c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 591
-        }
+        },
+        "outputId": "f5c473c5-8d03-425a-ac16-e2ec1b13633c"
       },
       "source": [
         "treineiros = tea[\"IN_TREINEIRO\"].value_counts(normalize=True).index\n",
@@ -1284,11 +1283,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Q-vlK1wNq238",
-        "outputId": "1f3acc45-afa9-48c8-9968-7d9097d8abbf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 510
-        }
+        },
+        "outputId": "1f3acc45-afa9-48c8-9968-7d9097d8abbf"
       },
       "source": [
         "dados.query(\"IN_AUTISMO == 1\")[\"NU_NOTA_TOTAL\"].value_counts()"
@@ -1341,11 +1340,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "IgXVteBUC077",
-        "outputId": "8567562e-f60b-43a8-91f8-dd24e34b94b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 367
-        }
+        },
+        "outputId": "8567562e-f60b-43a8-91f8-dd24e34b94b8"
       },
       "source": [
         "dados['TXT_AUTISMO']=pd.cut(\n",
@@ -1396,11 +1395,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "lemzv3Zt5CGs",
-        "outputId": "f65b382f-0d71-4832-a2e9-69a9805cb4ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 367
-        }
+        },
+        "outputId": "f65b382f-0d71-4832-a2e9-69a9805cb4ce"
       },
       "source": [
         "dados['TXT_AUTISMO']=pd.cut(\n",
@@ -1454,11 +1453,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "s98H7RexmXnh",
-        "outputId": "4a7cbcaf-4e72-4808-ad32-7768a9fdb8fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 548
-        }
+        },
+        "outputId": "4a7cbcaf-4e72-4808-ad32-7768a9fdb8fd"
       },
       "source": [
         "plt.figure(figsize=(12,8))\n",
@@ -1512,11 +1511,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "n1xLeAmgnGUn",
-        "outputId": "be9ea7c8-713c-4c84-9d7e-5e819e45229b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 920
-        }
+        },
+        "outputId": "be9ea7c8-713c-4c84-9d7e-5e819e45229b"
       },
       "source": [
         "sns.pairplot(dados.query(\"IN_AUTISMO == 1\")[provas])"
@@ -1554,11 +1553,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "YaOs3S48nnF7",
-        "outputId": "4fe8d6a8-b435-4709-df07-c958ca41ce01",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 601
-        }
+        },
+        "outputId": "4fe8d6a8-b435-4709-df07-c958ca41ce01"
       },
       "source": [
         "#matriz\n",
@@ -1625,11 +1624,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "KgDWKlfYo5t4",
-        "outputId": "0e98bf1d-74ee-4b5a-d2cb-bf53f65da885",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
-        }
+        },
+        "outputId": "0e98bf1d-74ee-4b5a-d2cb-bf53f65da885"
       },
       "source": [
         "renomear = {0 : 'Não declarado', \n",
@@ -1715,11 +1714,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "hTdOsFhoo_rl",
-        "outputId": "57c1989f-c9aa-4530-93a1-4e03c2711be1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
-        }
+        },
+        "outputId": "57c1989f-c9aa-4530-93a1-4e03c2711be1"
       },
       "source": [
         "sns.barplot(x=['Branca', 'Parda', 'Preta', 'Não declarado'], y=[16, 7, 5, 1], palette=\"pastel\")\n",
@@ -1778,11 +1777,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "VOUgEG6_9EZh",
-        "outputId": "ede85a4d-8a2c-4a36-e786-b8f7b7bba976",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 306
-        }
+        },
+        "outputId": "ede85a4d-8a2c-4a36-e786-b8f7b7bba976"
       },
       "source": [
         "dados.query(\"IN_AUTISMO == 1\")[\"SG_UF_RESIDENCIA\"].value_counts()"
@@ -1823,11 +1822,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_KVyx7a5FW2",
-        "outputId": "f9b078e6-24e5-4559-d7e2-fa2d5e459743",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
-        }
+        },
+        "outputId": "f9b078e6-24e5-4559-d7e2-fa2d5e459743"
       },
       "source": [
         "labels = tea[\"SG_UF_RESIDENCIA\"].value_counts(normalize=True).index\n",
@@ -1878,11 +1877,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "WmfiAlEsDBDh",
-        "outputId": "9da80965-1dd6-4ad4-a2e8-1de6e4e88816",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        }
+        },
+        "outputId": "9da80965-1dd6-4ad4-a2e8-1de6e4e88816"
       },
       "source": [
         "dados.query(\"IN_AUTISMO == 1\")[\"NU_IDADE\"].value_counts()"
@@ -1920,11 +1919,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "xiB6eENP4ga4",
-        "outputId": "4ce50ec0-3eee-47b2-a65e-e11c78cf1bfd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 458
-        }
+        },
+        "outputId": "4ce50ec0-3eee-47b2-a65e-e11c78cf1bfd"
       },
       "source": [
         "l = tea[\"NU_IDADE\"].value_counts(normalize=True).index\n",
@@ -1981,11 +1980,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "7MJxprShDWcW",
-        "outputId": "bdbf5c5b-c424-46c1-d81d-cb4ca5817e69",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
-        }
+        },
+        "outputId": "bdbf5c5b-c424-46c1-d81d-cb4ca5817e69"
       },
       "source": [
         "dados.query(\"IN_AUTISMO == 1\")[\"Q006\"].value_counts()"
@@ -2022,11 +2021,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "-NCXqoQmBRmT",
-        "outputId": "8f324cea-e8cc-4e0e-86b0-a58b1012a01f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 475
-        }
+        },
+        "outputId": "8f324cea-e8cc-4e0e-86b0-a58b1012a01f"
       },
       "source": [
         "autistas = dados[dados['IN_AUTISMO'] == 1]\n",
@@ -2093,11 +2092,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Xgt65WEgBiY4",
-        "outputId": "de2e9711-82bb-4c1d-e7e2-252690dfa993",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 591
-        }
+        },
+        "outputId": "de2e9711-82bb-4c1d-e7e2-252690dfa993"
       },
       "source": [
         "l = tea[\"TP_SEXO\"].value_counts(normalize=True).index\n",
@@ -2151,11 +2150,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "gLUOudsfjezG",
-        "outputId": "da253de9-0971-4765-bb17-d4e83d154825",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
-        }
+        },
+        "outputId": "da253de9-0971-4765-bb17-d4e83d154825"
       },
       "source": [
         "plt.figure(figsize=(10,8))\n",
@@ -2269,11 +2268,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "DcVnNny4QofD",
-        "outputId": "31a50e9d-c54a-4f91-ad23-cb25ce72b026",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
-        }
+        },
+        "outputId": "31a50e9d-c54a-4f91-ad23-cb25ce72b026"
       },
       "source": [
         "sns.barplot(x=['Brasil', 'ENEM'], y=[1, 0.02], palette=\"pastel\")\n",
@@ -2322,11 +2321,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZOipwMqOUoYM",
-        "outputId": "79bbba6e-ca95-4d4b-9b17-c70e18978b7f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
-        }
+        },
+        "outputId": "79bbba6e-ca95-4d4b-9b17-c70e18978b7f"
       },
       "source": [
         "sns.barplot(x=['Brasil', 'ENEM'], y=[105842, 0.027], palette=\"pastel\")\n",
@@ -2462,10 +2461,6 @@
       "source": [
         "É completamente necessário falar do assunto, são cerca de dois milhões de brasileiros que convivem com o TEA, não dá mais para ser adiado. É preciso discutir, refletir, se informar sobre! Eles existem e precisam ser vistos."
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "GUreOJUN1W8U"
-      },
-     
+    }
+  ]
+}
